# BastiBotMusicV4RS

./: Cargo.toml  Dockerfile
BastiBotMusicV4RS/: Cargo.toml  Dockerfile
BastiBotMusicV4RS/src/: main.rs  utils.rs
BastiBotMusicV4RS/src/commands/: mod.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs  version.rs
src/: main.rs  utils.rs
src/.commands/: pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs  version.rs
src/commands/: mod.rs  pause.rs  stop.rs
