[package]
name = "BastiBotMusicV4RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = "0.3.2"
url = "2.2"

[dependencies.serenity]
version = "0.11.5"
features = ["voice"]

[lib]
name = "my_project"
path = "src/lib.rs"