[package]
name = "BastiBotMusicV4RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
url = "2.2"

[dependencies.serenity]
version = "0.11.5"
features = ["voice", "cache", "framework", "standard_framework", "utils"]

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue"]

[lib]
name = "my_project"
path = "src/lib.rs"